syntax = "proto3";

// Package auth содержит API для работы с аутентификацией
package auth.v1;

option go_package = "github.com/nkolesnikov999/micro2-OK/shared/pkg/proto/auth/v1;auth_v1";

import "google/api/annotations.proto";
import "common/v1/session.proto";
import "common/v1/user.proto";

// AuthService предоставляет методы для работы с пользовательской аутентификацией.
service AuthService {
  // Login выполняет аутентификацию пользователя и возвращает активную сессию.
    rpc Login(LoginRequest) returns (LoginResponse) {
      option (google.api.http) = {
        post: "/api/v1/iam/login"
        body: "*"
    };
  }
    // Whoami возвращает данные текущей сессии и пользователя.
    rpc Whoami(WhoamiRequest) returns (WhoamiResponse) {
      option (google.api.http) = {
        post: "/api/v1/iam/whoami"
        body: "*"
    };
  }
}

// LoginRequest описывает данные для аутентификации пользователя.
message LoginRequest {
  string login = 1;
  string password = 2;
}

// LoginResponse содержит UUID созданной/активной сессии.
message LoginResponse {
  string session_uuid = 1;
}

// WhoamiRequest содержит UUID активной сессии пользователя.
message WhoamiRequest {
  string session_uuid = 1;
}

// WhoamiResponse возвращает информацию о текущей сессии и её владельце.
message WhoamiResponse {
  common.v1.Session session = 1;
  common.v1.User user = 2;
}